// Don't forget to check msix config for icon's path in pubspec.yaml. The path might be not right as we change the location path.

### CREATE MSIX PACKAGE
// Creating an MSIX installer
// To create a MSIX installer, run the following command:
// ****** NOTE: Don't forget to change version in pubspec.yml before create package
PS c:\src\flutter_project> dart run msix:create


### ANDROID RELEASE
Remember to change versionCode before upload AppBundle to Google Console
Go to pubspec.yml to change version: 1.0.2+2

### KEYSTORE
Keystore is saved in Onedrive Vault
Remember to change path for keystore in android/key.properties

Remember to change version (v93) in Properties view too