@@ -8,7 +8,7 @@ class ThesaurusRepository implements Thesaurus {
 
   @override
   Future<Map<String,List<String>>> loadSynonymsData() async {
-    String jsonString = await rootBundle.loadString(Properties.EN_SYNONYMS_PATH);
+    String jsonString = await rootBundle.loadString(Properties.enSynonymsPath);
     Map<String, dynamic> jsonData = jsonDecode(jsonString);
     return jsonData.map((key, value) {
       return MapEntry<String, List<String>>(key, List<String>.from(value));
@@ -17,7 +17,7 @@ class ThesaurusRepository implements Thesaurus {
 
   @override
   Future<Map<String,List<String>>> loadAntonymsData() async {
-    String jsonString = await rootBundle.loadString(Properties.EN_ANTONYMS_PATH);
+    String jsonString = await rootBundle.loadString(Properties.enAntonymsPath);
     Map<String, dynamic> jsonData = jsonDecode(jsonString);
     return jsonData.map((key, value) {
       return MapEntry<String, List<String>>(key, List<String>.from(value));
